--- a/style.css
+++ b/style.css
@@ -1,61 +1,96 @@
 *{
   margin: 0;
   padding: 0;
-  text-decoration: none;
-  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-body, html {
-  height: 100%;
+html {
+  scroll-behavior: smooth;
+}
+
+.wrapper {
+  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
+  height: 200px;
+}
+
+
+.container{
+  text-align: center;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 100%;
+}
+
+.container span{
+  text-transform: uppercase;
+  display: block;
+}
+
+.text1{
+  color: white;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  margin-bottom: 20px;
+  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+  position: relative;
+  animation: text 3s 1;
+}
+
+.text2{
+  font-size: 30px;
+  color: white;
+}
+
+@keyframes text {
+  0%{
+    color: black;
+    margin-bottom: -40px;
+  }
+  30%{
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85%{
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+}
+
+ul {
+  list-style-type: none;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  overflow: hidden;
+  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
+  z-index: 3;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+    background-image: linear-gradient(315deg, #ef5734 0%, #ffcc2f 74%);
 }
 
 
 .bg-image {
-  background-image: url("img/background.jpg");
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bg-image2 {
-  background-image: url("img/background2.gif");
-  height: 1200px;
-  width: 80%;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  left:10%;
-  border: 3px solid white;
-}
-
-.bg-image3 {
-  background-color: black;
-  height: 700px;
+  background-image: url("img/bg.jpg");
   width: 100%;
-  top: 1100px;
-  position: absolute;
-}
-
-.bg-image4 {
-  background-color: black;
-  height: 0px;
-  width: 80%;
-  top: 300px;
-  position: absolute;
-  left:20%;
-}
-
-.bg-image5 {
-  background-image: url("img/test1.HEIC");
-  width: 100%;
-  top:700px;
   min-height: 400%;
   background-attachment: fixed;
   background-position: center;
@@ -64,24 +99,21 @@ body, html {
   position: absolute;
 }
 
-.bg-text {
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.4);
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
+.info {
+  top: 1000px;
+  left: 35%;
+  height: 450px;
+  width: 23%;
+  background-color: white;
+  position:absolute;
+  padding: 10px 70px;
+  font-stretch: condensed;
 }
 
+
 .meet {
-  background: url("img/background2.gif")   -20px -20px no-repeat;
+
+  background-image: linear-gradient(315deg, #ef5734 0%, #ffcc2f 74%);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  display:block;
@@ -93,124 +125,41 @@ body, html {
  letter-spacing: -25px;
  background-size: cover;
  margin-top: 3%;
+ -webkit-animation: mymove 3s
+  -webkit-animation-iteration-count: infinite
+  animation: mymove 3s
+  animation-iteration-count: infinite
 }
 
-.wrapper {
-  height:100%;
-  width: 100%;
+@-webkit-keyframes mymove {
+  0%{
+    background-color: #FFFF66;
+  }
+  50%{
+    background-color: black;
+  }
+  100%{
+    background-color: #FFFF66;
+}
+}
+
+@keyframes mymove {
+  0%{
+    background-color: #FFFF66;
+  }
+50%{
   background-color: black;
 }
-
-.wrapper2 {
-  height: 1100px;
-  width: 100%;
-  background-color: black;
+  100%{
+    background-color: #FFFF66;
+}
 }
 
-.topnav {
-  bottom: -30px;
-  width: 100%;
-  left: 50%;
-  position: fixed;
-  overflow: hidden;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.4);
-  color: white;
-  font-weight: bold;
-  border: 3px solid black;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  height: 7%;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 20px 0px;
-  text-decoration: none;
-  font-size: 17px;
-  height: 100%;
-  width: 10%
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-  height: 100%;
-  width: 10%;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-  height: 100%;
-  width: 10%
-}
-
-.topnav-centered a {
-  float: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 100%;
-  width: 10%
-}
-
-.topnav-right {
-  float: right;
-  top: 50%;
-  left: 50%;
-  height: 100%;
-  width: 10%;
-
-}
-
-.box {
-max-width:50%;
-position: absolute;
-top:43%;
-left:25%;
-border: 4px solid white;
-}
-
-.w3-center{
-  display: center;
-  font-size: large;
-  color: white;
-}
-.mySlides {
-  display:none
-}
-.w3-left, .w3-right, .w3-badge {
-  cursor:pointer;
-  color: white;
-  font-size: 200%;
-  position: absolute;
-}
-.w3-badge {
-  height:13px;
-  width:13px;
-  padding:0
-  color:white;
-}
-
-.info {
-  top: 600px;
-  left: 25%;
-  height: 300px;
-  width: 50%;
-  background-color: white;
-  position:absolute;
-  padding: 10px 100px;
-  font-stretch: condensed;
-}
 
 .column1 {
-  top: 10%;
+  top: 100px;
   float: left;
-  left: -10%;
+  left: 15%;
   width: 170px;
   margin-bottom: 16px;
   position: absolute;
@@ -259,7 +208,6 @@ border: 4px solid white;
   font-size: 200%;
 }
 
-
 .overlay .closebtn {
   position: absolute;
   top: 20px;
@@ -268,17 +216,19 @@ border: 4px solid white;
   color: white;
 }
 
+
+
 input[type=text], select, textarea {
   width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  margin-top: 6px;
-  margin-bottom: 16px;
+  padding: 7px;
+  border: 1px solid black;
+  margin-top: 0px;
+  margin-bottom: 5px;
   resize: vertical;
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: black;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -286,22 +236,16 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-/* Style the container/contact section */
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 10px;
+  background-color: grey;
 }
 
 /* Create two columns that float next to eachother */
 .column {
   float: left;
-  width: 50%;
-  margin-top: 6px;
-  padding: 20px;
+  width: 100%;
+  margin-top: 10px;
+  padding: 0px;
+  color: white;
 }
 
 /* Clear floats after the columns */
@@ -318,26 +262,3 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
-
-
-@media screen and (max-height: 450px) {
-  .overlay .closebtn {
-  font-size: 40px;
-  top: 15px;
-  right: 35px;
-  }
-
-
-
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav-right {
-    float: none;
-    display: block;
-  }
-
-  .topnav-centered a {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: none;
-  }
