--- a/style.css
+++ b/style.css
@@ -8,56 +8,18 @@ html {
   scroll-behavior: smooth;
 }
 
+
+
 .wrapper {
+  top:1000px;
   background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
-  height: 200px;
-}
-
-
-.container{
-  text-align: center;
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  height: 700px;
   width: 100%;
+  position: absolute;
+  min-width: 1370px;
+  z-index: 3;
 }
 
-.container span{
-  text-transform: uppercase;
-  display: block;
-}
-
-.text1{
-  color: white;
-  font-size: 60px;
-  font-weight: 700;
-  letter-spacing: 8px;
-  margin-bottom: 20px;
-  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
-  position: relative;
-  animation: text 3s 1;
-}
-
-.text2{
-  font-size: 30px;
-  color: white;
-}
-
-@keyframes text {
-  0%{
-    color: black;
-    margin-bottom: -40px;
-  }
-  30%{
-    letter-spacing: 25px;
-    margin-bottom: -40px;
-  }
-  85%{
-    letter-spacing: 8px;
-    margin-bottom: -40px;
-  }
-}
 
 ul {
   list-style-type: none;
@@ -65,10 +27,11 @@ ul {
   padding: 0;
   overflow: hidden;
   background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
-  position: -webkit-sticky;
-  position: sticky;
+  width: 100%;
+  position: fixed;
   top: 0%;
-  z-index: 3;
+  z-index: 4;
+
 }
 
 li {
@@ -90,14 +53,33 @@ li a:hover {
 
 .bg-image {
   background-image: url("img/bg.jpg");
-  width: 100%;
-  min-height: 400%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: absolute;
+ min-height:100%;
+    min-width:1370px;
+    height:auto;
+    width:auto;
+    position:absolute;
+    top:-100%; bottom:-100%;
+    left:-0%; right:-0%;
 }
+
+.bg-image2 {
+  background-image: url("img/bg.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  min-width:1370px;
+  height: 2500px;
+  top: 0;
+  position: relative;
+  min-height: 2500px;
+}
+
 
 .info {
   top: 1000px;
@@ -105,14 +87,14 @@ li a:hover {
   height: 450px;
   width: 23%;
   background-color: white;
-  position:absolute;
+  position: absolute;
   padding: 10px 70px;
   font-stretch: condensed;
+  min-width: 370px;
 }
 
 
 .meet {
-
   background-image: linear-gradient(315deg, #ef5734 0%, #ffcc2f 74%);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
@@ -125,53 +107,66 @@ li a:hover {
  letter-spacing: -25px;
  background-size: cover;
  margin-top: 3%;
- -webkit-animation: mymove 3s
-  -webkit-animation-iteration-count: infinite
-  animation: mymove 3s
-  animation-iteration-count: infinite
-}
-
-@-webkit-keyframes mymove {
-  0%{
-    background-color: #FFFF66;
-  }
-  50%{
-    background-color: black;
-  }
-  100%{
-    background-color: #FFFF66;
-}
-}
-
-@keyframes mymove {
-  0%{
-    background-color: #FFFF66;
-  }
-50%{
-  background-color: black;
-}
-  100%{
-    background-color: #FFFF66;
-}
+ min-width: 1370px;
 }
 
 
 .column1 {
   top: 100px;
   float: left;
-  left: 15%;
-  width: 170px;
+  left: 20%;
+  width: 9%;
   margin-bottom: 16px;
-  position: absolute;
   text-align: center;
+  max-width: 650px;
+  padding: 10px;
+  position: relative;
+
 }
 
+
+@media screen and (max-width: 1285px) {
+  .column1 {
+    font-size: 80%;
+  }
+  .bg-image2 {
+
+    top: 250px;
+
+  }
+}
+
+@media screen and (max-width: 850px) {
+
+  .bg-image2 {
+
+    top: 500px;
+
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .column1 {
+    height: 150px;
+    left:1%;
+    font-size: 80%;
+  }
+  .wrapper {
+    height: 1000px;
+  }
+  .bg-image2 {
+
+    top: 1000px;
+
+  }
+}
 
 @media screen and (max-width: 650px) {
   .column1 {
     width: 100%;
     display: block;
   }
+
 }
 
 
